@@ -1,5 +1,7 @@
 Version 1.0.1-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1205680: upcoming.php was including unapproved.  will now use
+        user preferences for displaying unapproved.
   - Other bugs fixed:
   - New Features / Enhancements / Changes:
     + Applied patch 1171807: reminder sent late if cron run at exact
