@@ -1,4 +1,6 @@
 Version 1.0.1-CVS (?? ??? 2005)
+ - Fixed bug 1205680: upcoming.php was including unapproved.  will now use
+   user preferences for displaying unapproved.
  - Patch 1171807: reminder sent late if cron run at exact second of reminder
  - Updated Polish translation
  - Updated German translation
